--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -105,30 +105,7 @@ jobs:
 
 workflows:
   build_and_test:
-    jobs:
-      - setup
-      - watch:
-          requires:
-            - setup
-      - service_build:
-          requires:
-            - setup
-          matrix:
-            parameters:
-              service: [
-                "credit-score-service",
-                "special-membership-service",
-                "welcome-member-email-service",
-              ]
-
-  scheduled:
-    triggers:
-      - schedule:
-          cron: "0,10,20,30,40,50 * * * *"
-          filters:
-            branches:
-              only:
-                - master
+    when: ${CIRCLE_BRANCH}=="circleci"
     jobs:
       - setup
       - watch:
