--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -5,11 +5,8 @@ name: Build and test
 
 on:
   push:
-    branches: [ master ]
-  pull_request:
-    branches: [ master ]
-  schedule:
-    - cron: "*/10 * * * *"
+    branches:
+      - github
 
 jobs:
 
