--- a/.github/workflows/honeycomb.yml
+++ b/.github/workflows/honeycomb.yml
@@ -13,9 +13,6 @@
 # 4. Create a GitHub Action Secret with this API key named "BUILDEVENT_APIKEY"
 
 
-# This workflow will build a Java project with Maven
-# For more information see: https://help.github.com/actions/language-and-framework-guides/building-and-testing-java-with-maven
-
 name: Trace Workflow
 
 on:
@@ -156,3 +153,4 @@ jobs:
           """
 
 # gha-buildevents will automatically run as a post action and execute 'buildevents build'
+# You can reach this trace via ui.honeycomb.io or clicking on the link in the 'Post Run honeycombio/gha-buildevents@v1' step
